--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="tablewrap">
     <table class="t">
-      <thead><tr><th style="width:28%">Exercise</th><th style="width:10%">Sets</th><th style="width:16%">Target</th><th style="width:14%">Weight</th><th style="width:12%">Pin</th><th style="width:20%">RIR</th></tr></thead>
+      <thead><tr><th style="width:26%">Exercise</th><th style="width:10%">Sets</th><th style="width:14%">Target</th><th style="width:14%">Weight</th><th style="width:14%">Pin</th><th style="width:18%">RIR</th><th style="width:4%">✕</th></tr></thead>
       <tbody id="tbody"></tbody>
     </table>
   </div>
@@ -91,5 +91,5 @@
 <footer class="footer">
   <div>Offline-first. Data stays on your device.</div>
   <div class="muted small">If you upload new files and iPad shows old version: Settings → Safari → Advanced → Website Data → delete github.io</div>
-<div class="muted small">Build: gym-template-v19-pin-multi-fw-weight</div></footer>
+<div class="muted small">Build: gym-template-v20-rowremove</div></footer>
 </main></body></html>
