--- a/index.html
+++ b/index.html
@@ -1,31 +1,131 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+<meta name="theme-color" content="#0b0f14" />
 <title>Workout</title>
-<link rel="stylesheet" href="styles.css"/>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<header class="topbar">
+  <div class="brand">
+    <div class="logo">W</div>
+    <div>
+      <div class="title">Workout</div>
+      <div class="subtitle">Strength • Fat Loss • Volume</div>
+    </div>
+  </div>
 
-<header>
-  <button id="prev">◀</button>
-  <input type="date" id="date"/>
-  <button id="next">▶</button>
+  <div class="datebar">
+    <button class="iconbtn" id="prevDay" aria-label="Previous day">◀</button>
+    <input type="date" id="dateInput" />
+    <button class="iconbtn" id="nextDay" aria-label="Next day">▶</button>
+    <button class="ghost" id="todayBtn">Today</button>
+  </div>
+
+  <div class="row gap" style="margin-top:10px;align-items:center">
+    <div class="pill" id="planPill">Plan</div>
+    <div class="muted small" id="planHint">Date decides the program. If you missed a session, it repeats.</div>
+  </div>
+
+  <div class="tabs">
+    <button class="tab active" data-tab="workout">Workout</button>
+    <button class="tab" data-tab="manage">Manage</button>
+    <button class="tab" data-tab="history">History</button>
+  </div>
 </header>
 
-<h2 id="title"></h2>
+<main class="wrap">
+  <section class="card" id="workoutCard">
+    <div class="cardhead">
+      <div class="cardtitle" id="dayTitle">Workout</div>
+      <div class="row gap">
+        <button class="btn" id="copyPrevBtn">Copy previous day</button>
+        <button class="btn danger" id="clearBtn">Clear day</button>
+      </div>
+    </div>
 
-<table>
-<thead>
-<tr>
-<th>Exercise</th><th>Sets</th><th>Reps/Time</th><th>Kg</th><th>Pin</th><th>RIR</th><th></th>
-</tr>
-</thead>
-<tbody id="rows"></tbody>
-</table>
+    <div class="tablewrap">
+      <table class="t">
+        <thead>
+          <tr>
+            <th style="width:26%">Exercise</th>
+            <th style="width:10%">Sets</th>
+            <th style="width:14%">Target</th>
+            <th style="width:14%">Kg</th>
+            <th style="width:18%">Pin</th>
+            <th style="width:12%">RIR</th>
+            <th style="width:6%"></th>
+          </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+      </table>
+    </div>
 
-<button id="save">Save</button>
+    <div class="row gap" style="margin-top:12px">
+      <button class="btn" id="addRowBtn">+ Add row</button>
+      <div class="spacer"></div>
+      <button class="btn accent" id="saveBtn">💾 Save</button>
+    </div>
+
+    <div class="note" id="note"></div>
+  </section>
+
+  <section class="card hidden" id="manageCard">
+    <div class="cardhead">
+      <div class="cardtitle">Manage Exercises</div>
+      <button class="btn" id="backFromManage">← Workout</button>
+    </div>
+
+    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
+      <input class="input" id="newName" placeholder="New exercise name" style="min-width:220px" />
+      <select class="input" id="newType" style="max-width:200px">
+        <option value="reps">Reps + Weight</option>
+        <option value="time">Time (sec)</option>
+      </select>
+      <button class="btn" id="addExBtn">Add</button>
+    </div>
+
+    <div class="muted small" style="margin-top:8px">
+      Rename or Delete an exercise. Delete removes it from presets & future days (history rows are removed too).
+    </div>
+    <div id="exList" class="list"></div>
+
+    <div class="divider" style="margin:16px 0"></div>
+
+    <div class="cardhead" style="margin-top:0">
+      <div class="cardtitle">Backup / Restore</div>
+    </div>
+    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
+      <button class="btn" id="exportBtn">Export JSON</button>
+      <label class="btn">Import JSON <input id="importFile" type="file" accept="application/json" hidden></label>
+      <div class="muted small" style="align-self:center">Use this to move data to another device.</div>
+    </div>
+  </section>
+
+  <section class="card hidden" id="historyCard">
+    <div class="cardhead">
+      <div class="cardtitle">History</div>
+      <button class="btn" id="backFromHistory">← Workout</button>
+    </div>
+    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
+      <select class="input" id="rangeSel" style="max-width:200px">
+        <option value="14">Last 14 days</option>
+        <option value="30" selected>Last 30 days</option>
+        <option value="90">Last 90 days</option>
+        <option value="365">Last 365 days</option>
+      </select>
+      <input class="input" id="search" placeholder="Search (e.g. squat)" style="min-width:220px" />
+    </div>
+    <div id="histList" class="history"></div>
+  </section>
+
+  <footer class="footer">
+    <div>Stable build: no service-worker cache.</div>
+    <div class="muted small">Build: gym-full-stable-v1</div>
+  </footer>
+</main>
 
 <script src="app.js"></script>
 </body>
