--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <footer class="footer">
     <div>Stable build: no service-worker cache.</div>
-    <div class="muted small">Build: gym-full-stable-v1</div>
+    <div class="muted small">Build: gym-full-stable-v2-no-autosave</div>
   </footer>
 </main>
 
