--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button class="ghost" id="todayBtn">Today</button>
   </div>
 
+  <div id="storageStatus" class="note" style="margin-top:10px"></div>
   <div class="row gap" style="margin-top:10px;align-items:center">
     <div class="pill" id="planPill">Plan</div>
     <div class="muted small" id="planHint">Date decides the program. If you missed a session, it repeats.</div>
@@ -132,7 +133,7 @@
 
   <footer class="footer">
     <div>Stable build: no service-worker cache.</div>
-    <div class="muted small">Build: gym-full-stable-v4-save-fix</div>
+    <div class="muted small">Build: gym-full-stable-v5-date-normalize-storage-fallback</div>
   </footer>
 </main>
 
