--- a/index.html
+++ b/index.html
@@ -1,142 +1,95 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<meta name="theme-color" content="#0b0f14" />
-<title>Workout</title>
-<link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+<meta name="theme-color" content="#0b0f14"/><meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="black"/><meta name="apple-mobile-web-app-title" content="Workout"/>
+<link rel="apple-touch-icon" href="apple-touch-icon.png"><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+<link rel="manifest" href="manifest.webmanifest"/><title>Workout</title><link rel="stylesheet" href="styles.css"/><script src="app.js" defer></script>
+</head><body>
 <header class="topbar">
-  <div class="brand">
-    <div class="logo">W</div>
-    <div>
-      <div class="title">Workout</div>
-      <div class="subtitle">Strength • Fat Loss • Volume</div>
-    </div>
-  </div>
-
+  <div class="brand"><div class="logo">W</div><div><div class="title">Workout</div><div class="subtitle">Strength • Fat Loss • Volume</div></div></div>
   <div class="datebar">
-    <button class="iconbtn" id="prevDay" aria-label="Previous day">◀</button>
-    <input type="date" id="dateInput" />
-    <button class="iconbtn" id="nextDay" aria-label="Next day">▶</button>
-    <button class="ghost" id="todayBtn">Today</button>
+    <button class="iconbtn" id="prevDay">◀</button><input type="date" id="dateInput"/><button class="iconbtn" id="nextDay">▶</button><button class="ghost" id="todayBtn">Today</button>
   </div>
-
-  <div id="storageStatus" class="note" style="margin-top:10px"></div>
   <div class="row gap" style="margin-top:10px;align-items:center">
-    <div class="pill" id="planPill">Plan</div>
-    <div class="muted small" id="planHint">Date decides the program. If you missed a session, it repeats.</div>
+    <select class="input" id="daySelect" style="max-width:240px">
+      <option value="">Select day…</option>
+      <option value="strength">Strength Day</option>
+      <option value="fatloss">Fat Loss Day</option>
+      <option value="volume">Volume Day</option>
+    </select>
+    <div class="muted small" id="daySelectHint">Pick a day type to load the preset for this date.</div>
   </div>
-
-  <div class="tabs">
-    <button class="tab active" data-tab="workout">Workout</button>
+<div class="tabs">
+    <button class="tab active" data-tab="strength">Strength Day</button>
+    <button class="tab" data-tab="fatloss">Fat Loss Day</button>
+    <button class="tab" data-tab="volume">Volume Day</button>
     <button class="tab" data-tab="manage">Manage</button>
     <button class="tab" data-tab="history">History</button>
   </div>
 </header>
 
 <main class="wrap">
-  <section class="card" id="workoutCard">
-    <div class="cardhead">
-      <div class="cardtitle" id="dayTitle">Workout</div>
-      <div class="row gap">
-        <button class="btn" id="copyPrevBtn">Copy previous day</button>
-        <button class="btn danger" id="clearBtn">Clear day</button>
-      </div>
-    </div>
-
-    <div class="tablewrap">
-      <table class="t">
-        <thead>
-          <tr>
-            <th style="width:26%">Exercise</th>
-            <th style="width:10%">Sets</th>
-            <th style="width:14%">Target</th>
-            <th style="width:14%">Kg</th>
-            <th style="width:18%">Pin</th>
-            <th style="width:12%">RIR</th>
-            <th style="width:6%"></th>
-          </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-      </table>
-    </div>
-
-    <div class="row gap" style="margin-top:12px">
-      <button class="btn" id="addRowBtn">+ Add row</button>
-      <div class="spacer"></div>
-      <button class="btn accent" id="saveBtn">💾 Save</button>
-    </div>
-
-    <div class="note" id="note"></div>
-  </section>
-
-  <section class="card hidden" id="manageCard">
-    <div class="cardhead">
-      <div class="cardtitle">Manage Exercises</div>
-      <button class="btn" id="backFromManage">← Workout</button>
-    </div>
-
-    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
-      <input class="input" id="newName" placeholder="New exercise name" style="min-width:220px" />
-      <select class="input" id="newType" style="max-width:200px">
-        <option value="reps">Reps + Weight</option>
-        <option value="time">Time (sec)</option>
-      </select>
-      <button class="btn" id="addExBtn">Add</button>
-    </div>
-
-    <div class="muted small" style="margin-top:8px">
-      Rename or Delete an exercise. Delete removes it from presets & future days (history rows are removed too).
-    </div>
-    <div id="exList" class="list"></div>
-
-    <div class="divider" style="margin:16px 0"></div>
-
-    <div class="cardhead" style="margin-top:0">
-      <div class="cardtitle">Backup / Restore</div>
-    </div>
-    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
-      <button class="btn" id="exportBtn">Export JSON</button>
-      <label class="btn">Import JSON <input id="importFile" type="file" accept="application/json" hidden></label>
-      <button class="btn" id="pasteBtn">Paste JSON</button>
-      <div class="muted small" style="align-self:center">Use this to move data to another device.</div>
-    </div>
-  <div id="pasteWrap" class="hidden" style="margin-top:12px">
-    <textarea class="input" id="pasteArea" placeholder="Paste backup JSON here" style="min-height:160px"></textarea>
-    <div class="row gap" style="margin-top:10px">
-      <button class="btn accent" id="pasteImportBtn">Import pasted JSON</button>
-      <button class="btn danger" id="pasteCancelBtn">Cancel</button>
+<section class="card" id="workoutCard">
+  <div class="cardhead"><div class="cardtitle" id="dayTitle">Strength Day</div>
+    <div class="row gap">
+      <button class="btn" id="loadPresetBtn">Load preset</button>
+      <button class="btn" id="copyPrevBtn">Copy previous day</button>
+      <button class="btn danger" id="clearBtn">Clear</button>
     </div>
   </div>
+
+  <div class="tablewrap">
+    <table class="t">
+      <thead><tr><th style="width:28%">Exercise</th><th style="width:10%">Sets</th><th style="width:16%">Target</th><th style="width:14%">Weight</th><th style="width:12%">Pin</th><th style="width:20%">RIR<th style="width:6%"></th></tr></thead>
+      <tbody id="tbody"></tbody>
+    </table>
+  </div>
+
+  <div class="row gap" style="margin-top:12px">
+    <button class="btn" id="addRowBtn">+ Add row</button><div class="spacer"></div>
+    <button class="btn accent" id="progBtn">⚡ Apply progression</button><button class="btn accent" id="saveBtn">💾 Save</button>
+  </div>
+
+  <div class="note" id="note"></div>
+</section>
+
+<section class="card hidden" id="manageCard">
+  <div class="cardhead"><div class="cardtitle">Manage Exercises</div></div>
+  <div class="row gap" style="margin-top:10px">
+    <input class="input" id="newName" placeholder="New exercise name"/>
+    <select class="input" id="newType"><option value="reps">Reps + Weight</option><option value="time">Time (seconds)</option></select>
+    <button class="btn" id="addExBtn">Add</button>
+  </div>
+  <div class="muted small" style="margin-top:8px">Delete = archive (history stays safe). You can restore anytime.</div>
+  <div id="exList" class="list"></div>
+
+  <div class="divider" style="margin:16px 0"></div>
+  <div class="cardhead" style="margin-top:0">
+    <div class="cardtitle">Backup / Restore</div>
+  </div>
+  <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
+    <button class="btn" id="exportBtn2">Export JSON</button>
+    <label class="btn">Import JSON<input id="importFile2" type="file" accept="application/json" hidden></label>
+    <div class="muted small" style="align-self:center">Use this to move data to another device or keep a copy.</div>
+  </div>
+
 </section>
 
 <section class="card hidden" id="historyCard">
-
-    <div class="cardhead">
-      <div class="cardtitle">History</div>
-      <button class="btn" id="backFromHistory">← Workout</button>
+  <div class="cardhead">
+    <div class="cardtitle">History</div>
+    <div class="row gap">
+      <select class="input" id="rangeSel"><option value="14">Last 14 days</option><option value="30" selected>Last 30 days</option><option value="90">Last 90 days</option><option value="365">Last 365 days</option></select>
+      <input class="input" id="search" placeholder="Search (e.g. squat)"/>
+      <button class="btn" id="exportBtn">Export JSON</button>
+      <label class="btn">Import JSON<input id="importFile" type="file" accept="application/json" hidden></label>
     </div>
-    <div class="row gap" style="margin-top:10px; flex-wrap:wrap">
-      <select class="input" id="rangeSel" style="max-width:200px">
-        <option value="14">Last 14 days</option>
-        <option value="30" selected>Last 30 days</option>
-        <option value="90">Last 90 days</option>
-        <option value="365">Last 365 days</option>
-      </select>
-      <input class="input" id="search" placeholder="Search (e.g. squat)" style="min-width:220px" />
-    </div>
-    <div id="histList" class="history"></div>
-  </section>
+  </div>
+  <div id="histList" class="history"></div>
+</section>
 
-  <footer class="footer">
-    <div>Stable build: no service-worker cache.</div>
-    <div class="muted small">Build: gym-full-stable-v6-rotation-fix-import</div>
-  </footer>
-</main>
-
-<script src="app.js"></script>
-</body>
-</html>
+<footer class="footer">
+  <div>Offline-first. Data stays on your device.</div>
+  <div class="muted small">If you upload new files and iPad shows old version: Settings → Safari → Advanced → Website Data → delete github.io</div>
+<div class="muted small">Build: gym-template-rir-v10-pin-multi-fw-weight-rowx</div></footer>
+</main></body></html>
